--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,9 @@
   <body>
     <header class="header">
       <nav class="header-menu">
-        <a class="header-logo link" href="./index.html">WebStudio</a>
+        <a class="header-logo link logo" href="./index.html"
+          ><span>Web</span>Studio</a
+        >
         <ul class="header-menu-list list">
           <li class="header-menu-item">
             <a class="header-menu-link link" href="./portfolio.html"
@@ -49,85 +51,120 @@
 
     <main>
       <section class="portfolio">
-        <h1 class="portfolio-title">Portfolio</h1>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">All</button>
+        <h1 class="portfolio-menu-title">Portfolio</h1>
+        <ul class="portfolio-menu-list list">
+          <li class="portfolio-menu-item">
+            <button class="portfolio-menu-btn button" type="button">All</button>
           </li>
-          <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">Web Site</button>
+          <li class="portfolio-menu-item">
+            <button class="portfolio-menu-btn button" type="button">
+              Web Site
+            </button>
           </li>
-          <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">App</button>
+          <li class="portfolio-menu-item">
+            <button class="portfolio-menu-btn button" type="button">App</button>
           </li>
-          <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">Design</button>
+          <li class="portfolio-menu-item">
+            <button class="portfolio-menu-btn button" type="button">
+              Design
+            </button>
           </li>
-          <li class="portfolio-item">
-            <button class="portfolio-btn" type="button">Marketing</button>
+          <li class="portfolio-menu-item">
+            <button class="portfolio-menu-btn button" type="button">
+              Marketing
+            </button>
           </li>
         </ul>
-      </section>
-
-      <section>
-        <ul class="list">
-          <li>
-            <img src="./images/img-portfolio-1.jpg" alt="Banking app" />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
-          </li>
-          <li>
-            <img src="./images/img-portfolio-2.jpg" alt="NFC Payment" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
+        <ul class="portfolio-products-list list">
+          <li class="portfolio-products-item">
             <img
+              class="porrtfolio-img"
+              src="./images/img-portfolio-1.jpg"
+              alt="Banking app"
+            />
+            <h3 class="portfolio-subtitle">Banking App Interface Concept</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-products-item">
+            <img
+              class="porrtfolio-img"
+              src="./images/img-portfolio-2.jpg"
+              alt="NFC Payment"
+            />
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-products-item">
+            <img
+              class="porrtfolio-img"
               src="./images/img-portfolio-3.jpg"
               alt="Laptop and smartphone"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
-          <li>
-            <img src="./images/img-portfolio-4.jpg" alt="Taxi driver" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img-portfolio-5.jpg" alt="Phone wallpapers" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
-          </li>
-          <li>
-            <img src="./images/img-portfolio-6.jpg" alt="Girl with phone" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
+          <li class="portfolio-products-item">
             <img
+              class="porrtfolio-img"
+              src="./images/img-portfolio-4.jpg"
+              alt="Taxi driver"
+            />
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-products-item">
+            <img
+              class="porrtfolio-img"
+              src="./images/img-portfolio-5.jpg"
+              alt="Phone wallpapers"
+            />
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li class="portfolio-products-item">
+            <img
+              class="porrtfolio-img"
+              src="./images/img-portfolio-6.jpg"
+              alt="Girl with phone"
+            />
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-products-item">
+            <img
+              class="porrtfolio-img"
               src="./images/img-portfolio-7.jpg"
               alt="Screenshots with stories"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h3 class="portfolio-subtitle">Instagram Stories Concept</h3>
+            <p class="portfolio-text">Design</p>
           </li>
-          <li>
-            <img src="./images/img-portfolio-8.jpg" alt="Organic food in bag" />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+          <li class="portfolio-products-item">
+            <img
+              class="porrtfolio-img"
+              src="./images/img-portfolio-8.jpg"
+              alt="Organic food in bag"
+            />
+            <h3 class="portfolio-subtitle">Organic Food</h3>
+            <p class="portfolio-text">Web Site</p>
           </li>
-          <li>
-            <img src="./images/img-portfolio-9.jpg" alt="Coffee" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+          <li class="portfolio-products-item">
+            <img
+              class="porrtfolio-img"
+              src="./images/img-portfolio-9.jpg"
+              alt="Coffee"
+            />
+            <h3 class="portfolio-subtitle">Fresh Coffee</h3>
+            <p class="portfolio-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html">WebStudio</a>
+      <a class="footer-logo link logo" href="./index.html"
+        ><span>Web</span>Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
