--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <header class="header">
       <nav class="header-menu">
-        <a class="header-logo link" href="./index.html">WebStudio</a>
+        <a class="header-logo link logo" href="./index.html"
+          ><span>Web</span>Studio</a
+        >
         <ul class="header-menu-list list">
           <li class="header-menu-item">
             <a class="header-menu-link link" href="./portfolio.html"
@@ -50,11 +52,11 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <button class="hero-btn button" type="button">Order Service</button>
       </section>
 
       <section class="benefits">
-        <h2 class="benefits-title">Benefits</h2>
+        <h2 class="benefits-title" hidden>Benefits</h2>
         <ul class="benefits-list list">
           <li class="benefits-item">
             <h3 class="benefits-subtitle">Strategy</h3>
@@ -172,7 +174,9 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html">WebStudio</a>
+      <a class="footer-logo link logo" href="./index.html"
+        ><span>Web</span>Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
