--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,12 @@
     <header class="header">
       <nav class="header-menu">
         <a class="header-logo link logo" href="./index.html"
-          ><span>Web</span>Studio</a
+          >Web<span class="header-logo-span">Studio</span></a
         >
         <ul class="header-menu-list list">
+          <li class="header-menu-item">
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+          </li>
           <li class="header-menu-item">
             <a class="header-menu-link link" href="./portfolio.html"
               >Portfolio</a
@@ -27,9 +30,6 @@
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link link" href="">Contacts</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="./index.html">Studio</a>
           </li>
         </ul>
       </nav>
@@ -77,85 +77,103 @@
         </ul>
         <ul class="portfolio-products-list list">
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-1.jpg"
-              alt="Banking app"
-            />
-            <h3 class="portfolio-subtitle">Banking App Interface Concept</h3>
-            <p class="portfolio-text">App</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-1.jpg"
+                alt="Banking app"
+              />
+              <h3 class="portfolio-subtitle">Banking App Interface Concept</h3>
+              <p class="portfolio-text">App</p>
+            </a>
           </li>
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-2.jpg"
-              alt="NFC Payment"
-            />
-            <h3 class="portfolio-subtitle">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-2.jpg"
+                alt="NFC Payment"
+              />
+              <h3 class="portfolio-subtitle">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-3.jpg"
-              alt="Laptop and smartphone"
-            />
-            <h3 class="portfolio-subtitle">Meditation App</h3>
-            <p class="portfolio-text">App</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-3.jpg"
+                alt="Laptop and smartphone"
+              />
+              <h3 class="portfolio-subtitle">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </a>
           </li>
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-4.jpg"
-              alt="Taxi driver"
-            />
-            <h3 class="portfolio-subtitle">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-4.jpg"
+                alt="Taxi driver"
+              />
+              <h3 class="portfolio-subtitle">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-5.jpg"
-              alt="Phone wallpapers"
-            />
-            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-5.jpg"
+                alt="Phone wallpapers"
+              />
+              <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </a>
           </li>
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-6.jpg"
-              alt="Girl with phone"
-            />
-            <h3 class="portfolio-subtitle">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-6.jpg"
+                alt="Girl with phone"
+              />
+              <h3 class="portfolio-subtitle">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-7.jpg"
-              alt="Screenshots with stories"
-            />
-            <h3 class="portfolio-subtitle">Instagram Stories Concept</h3>
-            <p class="portfolio-text">Design</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-7.jpg"
+                alt="Screenshots with stories"
+              />
+              <h3 class="portfolio-subtitle">Instagram Stories Concept</h3>
+              <p class="portfolio-text">Design</p>
+            </a>
           </li>
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-8.jpg"
-              alt="Organic food in bag"
-            />
-            <h3 class="portfolio-subtitle">Organic Food</h3>
-            <p class="portfolio-text">Web Site</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-8.jpg"
+                alt="Organic food in bag"
+              />
+              <h3 class="portfolio-subtitle">Organic Food</h3>
+              <p class="portfolio-text">Web Site</p>
+            </a>
           </li>
           <li class="portfolio-products-item">
-            <img
-              class="porrtfolio-img"
-              src="./images/img-portfolio-9.jpg"
-              alt="Coffee"
-            />
-            <h3 class="portfolio-subtitle">Fresh Coffee</h3>
-            <p class="portfolio-text">Web Site</p>
+            <a class="portfolio-products-link link" href=""
+              ><img
+                class="porrtfolio-img"
+                src="./images/img-portfolio-9.jpg"
+                alt="Coffee"
+              />
+              <h3 class="portfolio-subtitle">Fresh Coffee</h3>
+              <p class="portfolio-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
@@ -163,7 +181,7 @@
 
     <footer class="footer">
       <a class="footer-logo link logo" href="./index.html"
-        ><span>Web</span>Studio</a
+        >Web<span class="footer-logo-span">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
