--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <header class="header">
       <nav class="header-menu">
         <a class="header-logo link logo" href="./index.html"
-          ><span>Web</span>Studio</a
+          >Web<span class="header-logo-span">Studio</span></a
         >
         <ul class="header-menu-list list">
+          <li class="header-menu-item">
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+          </li>
           <li class="header-menu-item">
             <a class="header-menu-link link" href="./portfolio.html"
               >Portfolio</a
@@ -27,9 +30,6 @@
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link link" href="">Contacts</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-menu-link link" href="./index.html">Studio</a>
           </li>
         </ul>
       </nav>
@@ -175,7 +175,7 @@
 
     <footer class="footer">
       <a class="footer-logo link logo" href="./index.html"
-        ><span>Web</span>Studio</a
+        >Web<span class="footer-logo-span">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
