--- a/portfolio.html
+++ b/portfolio.html
@@ -82,8 +82,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-1.jpg"
                 alt="Banking app"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Banking App Interface Concept</h3>
+              <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
               <p class="portfolio-text">App</p>
             </a>
           </li>
@@ -93,8 +94,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-2.jpg"
                 alt="NFC Payment"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Cashless Payment</h3>
+              <h2 class="portfolio-subtitle">Cashless Payment</h2>
               <p class="portfolio-text">Marketing</p>
             </a>
           </li>
@@ -104,8 +106,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-3.jpg"
                 alt="Laptop and smartphone"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Meditation App</h3>
+              <h2 class="portfolio-subtitle">Meditation App</h2>
               <p class="portfolio-text">App</p>
             </a>
           </li>
@@ -115,8 +118,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-4.jpg"
                 alt="Taxi driver"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Taxi Service</h3>
+              <h2 class="portfolio-subtitle">Taxi Service</h2>
               <p class="portfolio-text">Marketing</p>
             </a>
           </li>
@@ -126,8 +130,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-5.jpg"
                 alt="Phone wallpapers"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+              <h2 class="portfolio-subtitle">Screen Illustrations</h2>
               <p class="portfolio-text">Design</p>
             </a>
           </li>
@@ -137,8 +142,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-6.jpg"
                 alt="Girl with phone"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Online Courses</h3>
+              <h2 class="portfolio-subtitle">Online Courses</h2>
               <p class="portfolio-text">Marketing</p>
             </a>
           </li>
@@ -148,8 +154,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-7.jpg"
                 alt="Screenshots with stories"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Instagram Stories Concept</h3>
+              <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
               <p class="portfolio-text">Design</p>
             </a>
           </li>
@@ -159,8 +166,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-8.jpg"
                 alt="Organic food in bag"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Organic Food</h3>
+              <h2 class="portfolio-subtitle">Organic Food</h2>
               <p class="portfolio-text">Web Site</p>
             </a>
           </li>
@@ -170,8 +178,9 @@
                 class="porrtfolio-img"
                 src="./images/img-portfolio-9.jpg"
                 alt="Coffee"
+                width="360"
               />
-              <h3 class="portfolio-subtitle">Fresh Coffee</h3>
+              <h2 class="portfolio-subtitle">Fresh Coffee</h2>
               <p class="portfolio-text">Web Site</p>
             </a>
           </li>
